# fck-aws-sso

./: Makefile  pyproject.toml
.github/workflows/: python-publish.yml
fck_aws_sso/: main.py
tests/: test_main.py
