[tool.poetry]
name = "fck-aws-sso"
version = "0.2.5"
description = "A tool to automate AWS SSO login"
authors = ["Oskar Korczak <oskar.korczak@protonmail.com>"]
readme = "README.md"
packages = [{ include = "fck_aws_sso" }]
repository = "https://github.com/oskarissimus/fck-aws-sso"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.13.0"
webdriver-manager = "^4.0.1"
typer = { extras = ["all"], version = ">=0.9,<0.16" }


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
black = ">=23.9.1,<25.0.0"
mypy = "^1.5.1"
isort = ">=5.12,<7.0"
pytest = ">=7.4.2,<9.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fck-aws-sso = 'fck_aws_sso.main:app'
